# IT-Practices

CNS/: gcd  gcd.cpp  gcd.py  gcd1  gcd1.cpp  generate_data  genrat.cpp  rsa.py  rsa2.py  same_digits.csv  varying_b.csv
CNS/Assignment1/: gcd_partb.cpp  modulo  modulo.cpp  part_a_results.csv
CNS/Assignment1(1)/: gcd  gcd1  gcd1.cpp  gcd_parta  gcd_parta.cpp  gcd_partb  gcd_partb.cpp  part_b_results.csv  plot_parta.py  plot_partb.py
CNS/Assignment2/: affine_caesar  affine_caesar.cpp  affine_table.csv  affine_table.py
CNS/Assignment3/: rsa  rsa.cpp  rsa_imp  rsa_imp.cpp  rsa_table.csv
ComputerAlgorithms/: analysis.txt  analysis1.txt  analysis2.txt  gmon.out  kmeans  kmeans.cpp  perf.data  perf.data.old  perf.script  perfguide.txt  pie_vis.py  quicksort  quicksort.cpp  quicksort1  quicksort2.c  visualization.txt
ComputerAlgorithms/CppProjects/ParallelProcessingFramework/: CMakeLists.txt  main.cpp
ComputerAlgorithms/CppProjects/ParallelProcessingFramework/cuda/: cuda_kernel.cuh
ComputerAlgorithms/CppProjects/ParallelProcessingFramework/include/: VectorProcessor.hpp  cuda_kernel.cu
ComputerAlgorithms/CppProjects/ParallelProcessingFramework/src/: VectorProcessor.cpp
ComputerAlgorithms/LA/: analysis.txt  anomaly_detection_vq.py  cannon_matrix  cannon_matrix.cpp  color_segmentation_kmeans.py  document_clustering_kmeans.py  gift_wrapping.py  gift_wrapping.sage  gmon.out  hybrid_sort  hybrid_sort.cpp  monte_carlo_pi_mpi  monte_carlo_pi_mpi.cpp  parallel_qsort  parallel_qsort.cpp  parallel_simpson_mpi  parallel_simpson_mpi.cpp  quicksort_compare  virtual-setup.txt  (+2 more)
(+64 files in other folders)
